# BOOM-TTE

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  progress.md  pyproject.toml
boom/data/: dataset_vis.py  load_processed_3d_data.py  load_processed_data.py  prepare_3D_mols.py  prepare_splits_10k.py  prepare_splits_qm9.py  qm9_3d_utils.py  readme.md
boom/datasets/: CoordDataset.py  SMILESDataset.py
boom/viz/: ParityPlot.py
experiments/: convert_condensed_csv.py
experiments/ChemBERTa/: environment.yml  readme.md  run_experiment_density.py  run_experiment_hof.py  run_experiment_qm9_alpha.py  run_experiment_qm9_cv.py  run_experiment_qm9_gap.py  run_experiment_qm9_homo.py  run_experiment_qm9_lumo.py  run_experiment_qm9_mu.py  run_experiment_qm9_r2.py  run_experiment_qm9_zpve.py
experiments/ModernBERT/: README.md  dataset.py  main.py  model.py  tokenizer.py  vocab_smi.txt
experiments/chemprop/: args_FLASK.py  environment_pascal.yml  make_data.ipynb  readme.md  train_FLASK.py
experiments/equivariant_transformer/: dataset.py  model.py  readme.md  run_experiment.py  trainer.py
experiments/gnn-ablation/: dataset.py  models.py  readme.md  run_experiment.py  run_hof_equivariant.py  trainer.py  utils.py
experiments/gnn-nlmtp/: 10k_data_with_ood_splits.csv  10k_dft_hof_data.csv  IMPLEMENTATION_COMPLETE.md  __init__.py  dataset.py  eval.py  model.py  run_experiment.ipynb  (+2 more)
qm9/: qm9_Cv.csv  qm9_alpha.csv  qm9_gap.csv  qm9_homo.csv  qm9_lumo.csv  qm9_mu.csv  qm9_r2.csv  qm9_zpve.csv
relevant_papers/: ood_test.txt
tests/: readme.md  test_datasets.py  test_viz.py
(+167 files in other folders)
